--- a/package.json
+++ b/package.json
@@ -1,31 +1,35 @@
 {
-  "name": "lodash-test",
-  "version": "1.0.1-1",
+  "name": "re-materialize",
+  "version": "1.0.1-3",
   "description": "Simple Testing for lodash",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/thecodechef/lodash-test.git"
+    "url": "git+ssh://git@github.com/thecodechef/re-materialize.git"
   },
   "keywords": [
-    "lodash",
-    "gulp",
-    "verb",
-    "layouts",
-    "templates",
-    "templating",
-    "javascript",
-    "js"
+    "material",
+    "theme",
+    "sublime-text",
+    "sublime",
+    "scheme",
+    "materialize",
+    "appbar",
+    "white-panels",
+    "themes",
+    "schemes",
+    "widget",
+    "widgets"
   ],
-  "author": "Jeremy Bolding",
+  "author": "Jeremy Bolding <cyberchefjay@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/thecodechef/lodash-test/issues"
+    "url": "https://github.com/thecodechef/re-materialize/issues"
   },
-  "homepage": "https://github.com/thecodechef/lodash-test#readme",
+  "homepage": "https://github.com/thecodechef/re-materialize#readme",
   "dependencies": {
     "lodash": "^4.14.0"
   },
@@ -35,22 +39,30 @@
     "fs": "0.0.2",
     "gulp": "^3.9.1",
     "gulp-bump": "^2.2.0",
-    "gulp-cson": "^0.4.0",
+    "gulp-cached": "^1.1.0",
+    "gulp-changed": "^1.3.1",
     "gulp-data": "^1.2.1",
+    "gulp-filenames": "^2.1.0",
+    "gulp-filter": "^4.0.0",
     "gulp-flatmap": "^1.0.0",
     "gulp-git": "^1.10.0",
     "gulp-if": "^2.0.1",
     "gulp-imagemin": "^3.0.2",
     "gulp-include": "^2.3.0",
     "gulp-load-plugins": "^1.2.4",
+    "gulp-newer": "^1.2.0",
+    "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.0.3",
+    "gulp-remember": "^0.3.1",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
+    "gulp-tag-version": "^1.3.0",
     "gulp-template": "^4.0.0",
     "gulp-util": "^3.0.7",
     "gulp-verb": "^0.3.0",
-    "gulp-yaml": "^1.0.1",
+    "gulp-wait": "0.0.2",
+    "gulp-wait2": "0.0.5",
     "path": "^0.12.7",
     "run-sequence": "^1.2.2",
     "sleep": "^3.0.1",
