--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "re-materialize",
-  "version": "1.0.1-1",
+  "version": "1.0.0",
   "description": "Simple Testing for lodash",
   "main": "gulpfile.js",
   "scripts": {
